# pdhfl

./: .gitignore  Models.md  README.md  pyproject.toml
benchmark/: partition_experiment.ipynb
performance/: allocate.py  allocations.json  experiments.sh  main.py  plot.py  plot.sh  quantisation_experiments.sh  requirements.txt  tabulate.py
performance/fl/: client.py  common.py  model.py  neural_networks.py  server.py
secure_aggregation/: README.md
