[tool.poetry]
name = "pdhfl"
version = "0.1.0"
description = ""
authors = ["Cody Lewis <hello@codymlewis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chex = "0.1.83"
datasets = "2.14.5"
einops = "0.7.0"
flax = "0.7.4"
h5py = "3.9.0"
jax = "0.4.19"
jaxopt = "0.8"
Jinja2 = "3.1.2"
matplotlib = "3.8.0"
numpy = "1.26.0"
optax = "0.1.7"
orbax-checkpoint = "0.4.1"
pandas = "2.1.1"
Pillow = "10.0.1"
pycryptodome = "3.19.0"
Pygments = "2.16.1"
pyseltongue = "1.0.2"
rarfile = "4.1"
requests = "2.31.0"
scikit-learn = "1.3.1"
scipy = "1.11.3"
tqdm = "4.66.1"

[tool.poetry.group.dev.dependencies]
autopep8 = ">=2.0.4"
jedi = "0.19.1"
jedi-language-server = "0.41.1"
flake8 = ">=6.1.0"
python-lsp-server = ">=1.8.0"
yapf = ">=0.40.1"

[tool.poetry.group.nvidia]
optional = true

[tool.poetry.group.nvidia.dependencies]
jaxlib = { extras = ["cuda12_pip"], version = "0.4.19" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
